15-ELB-AutoScaling-Cloudwatch/15-ELB_Autoscaling_Cloudwatch/security-group.tf
resource "aws_security_group" "SG-my-security-group" {
  name        = "SG-my-security-group"
  description = "Allow 22 port inbound traffic"
  vpc_id      = var.vpc_id
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ### ssh
  ingress {
    description = "TLS from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ##Allow elb traffic
  ingress {
    description = "Allow ELB traffic"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
